apps/fast-api/envs/dev/stac-fast-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app-elasticsearch
  name: stac-fast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app-elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: app-elasticsearch
    spec:
      containers:
        - args:
            - bash
            - -c
            - ./scripts/wait-for-it-es.sh elasticsearch-master:9200 && python -m stac_fastapi.elasticsearch.app
          image: tjellicoetpzuk/stac-fast-api:latest
          name: stac-fastapi-es
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
